--- a/package.json
+++ b/package.json
@@ -26,22 +26,17 @@
     "@types/node": "^22.5.2",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.11.0",
     "electron": "*",
-    "eslint": "^8.57.0",
-    "eslint-plugin-import": "^2.29.1",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "~4.5.4",
-    "typescript-eslint": "^8.5.0"
+    "typescript": "~4.5.4"
   },
   "keywords": [],
   "author": {
