--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "audio-trainingset-studio",
-  "productName": "audio-trainingset-studio",
+  "name": "audio-dataset-studio",
+  "productName": "audio-dataset-studio",
   "version": "1.0.0",
   "description": "My Electron application description",
   "main": ".webpack/main",
