--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "audio-dataset-studio",
   "productName": "audio-dataset-studio",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
@@ -9,7 +9,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint --ext .ts,.tsx ."
+    "lint": "eslint --ext .ts,.tsx .",
+    "build": "electron-forge package"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
