--- a/package.json
+++ b/package.json
@@ -45,9 +45,10 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@zwa73/audio-utils": "^1.0.7",
+    "@zwa73/audio-utils": "^1.0.21",
+    "@zwa73/js-utils": "^1.0.26",
     "@zwa73/react-utils": "^1.0.1",
-    "@zwa73/utils": "^1.0.204",
+    "@zwa73/utils": "^1.0.221",
     "electron-squirrel-startup": "^1.0.1",
     "path-browserify": "^1.0.1",
     "pathe": "^2.0.2",
