--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@vercel/webpack-asset-relocator-loader": "^1.7.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.11.0",
-    "electron": "*",
+    "electron": "32.0.1",
     "fork-ts-checker-webpack-plugin": "^7.3.0",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.4",
