--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
-    "typescript": "~4.5.4"
+    "typescript": "~4.5.4",
+    "webpack": "5.94.0"
   },
   "keywords": [],
   "author": {
@@ -46,15 +47,16 @@
   "license": "MIT",
   "dependencies": {
     "@zwa73/audio-utils": "^1.0.21",
-    "@zwa73/js-utils": "^1.0.26",
-    "@zwa73/react-utils": "^1.0.3",
-    "@zwa73/utils": "^1.0.221",
+    "@zwa73/js-utils": "^1.0.69",
+    "@zwa73/modular-mixer": "^1.0.8",
+    "@zwa73/react-utils": "file:../SosarcielCore/NodeJs/workspace/react-utils/zwa73-react-utils-1.0.4.tgz",
+    "@zwa73/utils": "^1.0.274",
     "electron-squirrel-startup": "^1.0.1",
     "path-browserify": "^1.0.1",
     "pathe": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.13",
+    "react-is": "^18.3.1",
     "wavesurfer.js": "^7.8.6"
   }
 }
