--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "outDir": "dist",
         "moduleResolution": "node",
         "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true,
         "strict": true,
         "jsx": "react-jsx",
         "paths": {
